# Compilation-Project

./: README.md
mini_ml/: README.md  index.mld  test.mly  visualiser.out
mini_ml/_build/: .db  .digest-db  trace.csexp
mini_ml/_build/default/: META.mini_ml  Makefile  README.md  dune  dune-project  mini_ml.dune-package  mini_ml.install
mini_ml/_build/default/.dune/: configurator  configurator.v2
mini_ml/_build/default/language/: Cmly.ml  Lexer.ml  Lexer.mll  Parser.cmly  Parser.ml  Parser.mli  Parser__mock.ml.mock  Parser_calc.automaton  Parser_calc.cmly  Parser_calc.dot  Parser_calc.ml  Parser_calc.mli  Parser_calc.mly  Parser_calc__mock.ml.mock  Parser_calc__mock.mli.inferred  Parser_sandbox.automaton  Parser_sandbox.cmly  Parser_sandbox.dot  Parser_sandbox.ml  Parser_sandbox.mly  Parser_sandbox__mock.ml.mock  Parser_simple.automaton  Parser_simple.cmly  Parser_simple.dot  Parser_simple.ml  Parser_simple.mly  Parser_simple__mock.ml.mock  Parser_simple__mock.mli.inferred  Tokens.ml  Tokens.mli  Tokens.mly  ast.ml  interpreter.mli  language.cma  language.cmxa  language.cmxs  language.ml-gen  type_system.ml  typer.ml  typer.mli  (+3 more)
mini_ml/_build/default/util/: dune  environment.ml  environment.mli  util.cma  (+3 more)
mini_ml/examples/syntax_incorrect/: incomplete_semicolon.mml  no_else.mml  no_request.mml  no_then.mml
mini_ml/language/: Lexer.mll  Parser.mly  Parser_calc.mly  Parser_sandbox.mly  Tokens.mly  ast.ml  ast.mli  dune  interpreter.ml  type_system.ml  type_system.mli  typer.ml  typer_naive.ml  typer_util.ml  value.ml  value.mli
mini_ml/util/: environment.ml
(+293 files in other folders)
